src/metadslx.soal.runtime/src/generated/java/metadslx/languages/soal/SoalParser.java
// Generated from SoalParser.g4 by ANTLR 4.5.1
package metadslx.languages.soal;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SoalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KNamespace=1, KEnum=2, KException=3, KStruct=4, KInterface=5, KThrows=6, 
		KOneway=7, KReturn=8, KBinding=9, KTransport=10, KEncoding=11, KProtocol=12, 
		KEndpoint=13, KAddress=14, KDatabase=15, KEntity=16, KAbstract=17, KComponent=18, 
		KComposite=19, KReference=20, KService=21, KWire=22, KTo=23, KImplementation=24, 
		KLanguage=25, KAssembly=26, KDeployment=27, KEnvironment=28, KRuntime=29, 
		KNull=30, KTrue=31, KFalse=32, KObject=33, KString=34, KInt=35, KLong=36, 
		KFloat=37, KDouble=38, KByte=39, KBool=40, KAny=41, KVoid=42, KTypeof=43, 
		TSemicolon=44, TColon=45, TDot=46, TComma=47, TAssign=48, TOpenParen=49, 
		TCloseParen=50, TOpenBracket=51, TCloseBracket=52, TOpenBrace=53, TCloseBrace=54, 
		TLessThan=55, TGreaterThan=56, TQuestion=57, TQuestionQuestion=58, TAmpersand=59, 
		THat=60, TBar=61, TAndAlso=62, TOrElse=63, TPlusPlus=64, TMinusMinus=65, 
		TPlus=66, TMinus=67, TTilde=68, TExclamation=69, TSlash=70, TAsterisk=71, 
		TPercent=72, TLessThanOrEqual=73, TGreaterThanOrEqual=74, TEqual=75, TNotEqual=76, 
		TAsteriskAssign=77, TSlashAssign=78, TPercentAssign=79, TPlusAssign=80, 
		TMinusAssign=81, TLeftShiftAssign=82, TRightShiftAssign=83, TAmpersandAssign=84, 
		THatAssign=85, TBarAssign=86, IDate=87, ITime=88, IDateTime=89, ITimeSpan=90, 
		IVersion=91, IStyle=92, IMTOM=93, ISSL=94, IHTTP=95, IREST=96, IWebSocket=97, 
		ISOAP=98, IXML=99, IJSON=100, IClientAuthentication=101, IdentifierNormal=102, 
		IdentifierVerbatim=103, IntegerLiteral=104, DecimalLiteral=105, ScientificLiteral=106, 
		DateTimeOffsetLiteral=107, DateTimeLiteral=108, DateLiteral=109, TimeLiteral=110, 
		RegularStringLiteral=111, GuidLiteral=112, UTF8BOM=113, WHITESPACE=114, 
		CRLF=115, LINEBREAK=116, LINE_COMMENT=117, COMMENT=118, DoubleQuoteVerbatimStringLiteral=119, 
		SingleQuoteVerbatimStringLiteral=120, DoubleQuoteVerbatimStringLiteralStart=121;
	public static final int
		RULE_main = 0, RULE_qualifiedName = 1, RULE_identifierList = 2, RULE_qualifiedNameList = 3, 
		RULE_annotationList = 4, RULE_returnAnnotationList = 5, RULE_annotation = 6, 
		RULE_returnAnnotation = 7, RULE_annotationBody = 8, RULE_annotationProperties = 9, 
		RULE_annotationPropertyList = 10, RULE_annotationProperty = 11, RULE_annotationPropertyValue = 12, 
		RULE_namespaceDeclaration = 13, RULE_declaration = 14, RULE_enumDeclaration = 15, 
		RULE_enumLiterals = 16, RULE_enumLiteral = 17, RULE_structDeclaration = 18, 
		RULE_propertyDeclaration = 19, RULE_databaseDeclaration = 20, RULE_entityReference = 21, 
		RULE_interfaceDeclaration = 22, RULE_operationDeclaration = 23, RULE_parameterList = 24, 
		RULE_parameter = 25, RULE_operationResult = 26, RULE_componentDeclaration = 27, 
		RULE_componentElements = 28, RULE_componentElement = 29, RULE_componentService = 30, 
		RULE_componentReference = 31, RULE_componentServiceOrReferenceBody = 32, 
		RULE_componentServiceOrReferenceElement = 33, RULE_componentProperty = 34, 
		RULE_componentImplementation = 35, RULE_componentLanguage = 36, RULE_compositeDeclaration = 37, 
		RULE_assemblyDeclaration = 38, RULE_compositeElements = 39, RULE_compositeElement = 40, 
		RULE_compositeComponent = 41, RULE_compositeWire = 42, RULE_wireSource = 43, 
		RULE_wireTarget = 44, RULE_deploymentDeclaration = 45, RULE_deploymentElements = 46, 
		RULE_deploymentElement = 47, RULE_environmentDeclaration = 48, RULE_runtimeDeclaration = 49, 
		RULE_runtimeReference = 50, RULE_assemblyReference = 51, RULE_databaseReference = 52, 
		RULE_bindingDeclaration = 53, RULE_bindingLayers = 54, RULE_transportLayer = 55, 
		RULE_httpTransportLayer = 56, RULE_restTransportLayer = 57, RULE_webSocketTransportLayer = 58, 
		RULE_httpTransportLayerProperties = 59, RULE_httpSslProperty = 60, RULE_httpClientAuthenticationProperty = 61, 
		RULE_encodingLayer = 62, RULE_soapEncodingLayer = 63, RULE_xmlEncodingLayer = 64, 
		RULE_jsonEncodingLayer = 65, RULE_soapEncodingProperties = 66, RULE_soapVersionProperty = 67, 
		RULE_soapMtomProperty = 68, RULE_soapStyleProperty = 69, RULE_protocolLayer = 70, 
		RULE_protocolLayerKind = 71, RULE_endpointDeclaration = 72, RULE_endpointProperties = 73, 
		RULE_endpointProperty = 74, RULE_endpointBindingProperty = 75, RULE_endpointAddressProperty = 76, 
		RULE_returnType = 77, RULE_typeReference = 78, RULE_simpleType = 79, RULE_nulledType = 80, 
		RULE_referenceType = 81, RULE_objectType = 82, RULE_valueType = 83, RULE_voidType = 84, 
		RULE_onewayType = 85, RULE_nullableType = 86, RULE_nonNullableType = 87, 
		RULE_nonNullableArrayType = 88, RULE_arrayType = 89, RULE_simpleArrayType = 90, 
		RULE_nulledArrayType = 91, RULE_constantValue = 92, RULE_typeofValue = 93, 
		RULE_identifier = 94, RULE_literal = 95, RULE_nullLiteral = 96, RULE_booleanLiteral = 97, 
		RULE_integerLiteral = 98, RULE_decimalLiteral = 99, RULE_scientificLiteral = 100, 
		RULE_stringLiteral = 101, RULE_contextualKeywords = 102;
	public static final String[] ruleNames = {
		"main", "qualifiedName", "identifierList", "qualifiedNameList", "annotationList", 
		"returnAnnotationList", "annotation", "returnAnnotation", "annotationBody", 
		"annotationProperties", "annotationPropertyList", "annotationProperty", 
		"annotationPropertyValue", "namespaceDeclaration", "declaration", "enumDeclaration", 
		"enumLiterals", "enumLiteral", "structDeclaration", "propertyDeclaration", 
		"databaseDeclaration", "entityReference", "interfaceDeclaration", "operationDeclaration", 
		"parameterList", "parameter", "operationResult", "componentDeclaration", 
		"componentElements", "componentElement", "componentService", "componentReference", 
		"componentServiceOrReferenceBody", "componentServiceOrReferenceElement", 
		"componentProperty", "componentImplementation", "componentLanguage", "compositeDeclaration", 
		"assemblyDeclaration", "compositeElements", "compositeElement", "compositeComponent", 
		"compositeWire", "wireSource", "wireTarget", "deploymentDeclaration", 
		"deploymentElements", "deploymentElement", "environmentDeclaration", "runtimeDeclaration", 
		"runtimeReference", "assemblyReference", "databaseReference", "bindingDeclaration", 
		"bindingLayers", "transportLayer", "httpTransportLayer", "restTransportLayer", 
		"webSocketTransportLayer", "httpTransportLayerProperties", "httpSslProperty", 
		"httpClientAuthenticationProperty", "encodingLayer", "soapEncodingLayer", 
		"xmlEncodingLayer", "jsonEncodingLayer", "soapEncodingProperties", "soapVersionProperty", 
		"soapMtomProperty", "soapStyleProperty", "protocolLayer", "protocolLayerKind", 
		"endpointDeclaration", "endpointProperties", "endpointProperty", "endpointBindingProperty", 
		"endpointAddressProperty", "returnType", "typeReference", "simpleType", 
		"nulledType", "referenceType", "objectType", "valueType", "voidType", 
		"onewayType", "nullableType", "nonNullableType", "nonNullableArrayType", 
		"arrayType", "simpleArrayType", "nulledArrayType", "constantValue", "typeofValue", 
		"identifier", "literal", "nullLiteral", "booleanLiteral", "integerLiteral", 
		"decimalLiteral", "scientificLiteral", "stringLiteral", "contextualKeywords"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'namespace'", "'enum'", "'exception'", "'struct'", "'interface'", 
		"'throws'", "'oneway'", "'return'", "'binding'", "'transport'", "'encoding'", 
		"'protocol'", "'endpoint'", "'address'", "'database'", "'entity'", "'abstract'", 
		"'component'", "'composite'", "'reference'", "'service'", "'wire'", "'to'", 
		"'implementation'", "'language'", "'assembly'", "'deployment'", "'environment'", 
		"'runtime'", "'null'", "'true'", "'false'", "'object'", "'string'", "'int'", 
		"'long'", "'float'", "'double'", "'byte'", "'bool'", "'any'", "'void'", 
		"'typeof'", "';'", "':'", "'.'", "','", "'='", "'('", "')'", "'['", "']'", 
		"'{'", "'}'", "'<'", "'>'", "'?'", "'??'", "'&'", "'^'", "'|'", "'&&'", 
		"'||'", "'++'", "'--'", "'+'", "'-'", "'~'", "'!'", "'/'", null, "'%'", 
		"'<='", "'>='", "'=='", "'!='", "'*='", "'/='", "'%='", "'+='", "'-='", 
		"'<<='", "'>>='", "'&='", "'^='", "'|='", "'Date'", "'Time'", "'DateTime'", 
		"'TimeSpan'", "'Version'", "'Style'", "'MTOM'", "'SSL'", "'HTTP'", "'REST'", 
		"'WebSocket'", "'SOAP'", "'XML'", "'JSON'", "'ClientAuthentication'", 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, "'@\"'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "KNamespace", "KEnum", "KException", "KStruct", "KInterface", "KThrows", 
		"KOneway", "KReturn", "KBinding", "KTransport", "KEncoding", "KProtocol", 
		"KEndpoint", "KAddress", "KDatabase", "KEntity", "KAbstract", "KComponent", 
		"KComposite", "KReference", "KService", "KWire", "KTo", "KImplementation", 
		"KLanguage", "KAssembly", "KDeployment", "KEnvironment", "KRuntime", "KNull", 
		"KTrue", "KFalse", "KObject", "KString", "KInt", "KLong", "KFloat", "KDouble", 
		"KByte", "KBool", "KAny", "KVoid", "KTypeof", "TSemicolon", "TColon", 
		"TDot", "TComma", "TAssign", "TOpenParen", "TCloseParen", "TOpenBracket", 
		"TCloseBracket", "TOpenBrace", "TCloseBrace", "TLessThan", "TGreaterThan", 
		"TQuestion", "TQuestionQuestion", "TAmpersand", "THat", "TBar", "TAndAlso", 
		"TOrElse", "TPlusPlus", "TMinusMinus", "TPlus", "TMinus", "TTilde", "TExclamation", 
		"TSlash", "TAsterisk", "TPercent", "TLessThanOrEqual", "TGreaterThanOrEqual", 
		"TEqual", "TNotEqual", "TAsteriskAssign", "TSlashAssign", "TPercentAssign", 
		"TPlusAssign", "TMinusAssign", "TLeftShiftAssign", "TRightShiftAssign", 
		"TAmpersandAssign", "THatAssign", "TBarAssign", "IDate", "ITime", "IDateTime", 
		"ITimeSpan", "IVersion", "IStyle", "IMTOM", "ISSL", "IHTTP", "IREST", 
		"IWebSocket", "ISOAP", "IXML", "IJSON", "IClientAuthentication", "IdentifierNormal", 
		"IdentifierVerbatim", "IntegerLiteral", "DecimalLiteral", "ScientificLiteral", 
		"DateTimeOffsetLiteral", "DateTimeLiteral", "DateLiteral", "TimeLiteral", 
		"RegularStringLiteral", "GuidLiteral", "UTF8BOM", "WHITESPACE", "CRLF", 
		"LINEBREAK", "LINE_COMMENT", "COMMENT", "DoubleQuoteVerbatimStringLiteral", 
		"SingleQuoteVerbatimStringLiteral", "DoubleQuoteVerbatimStringLiteralStart"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SoalParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SoalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MainContext extends ParserRuleContext {
		public List<NamespaceDeclarationContext> namespaceDeclaration() {
			return getRuleContexts(NamespaceDeclarationContext.class);
		}
		public NamespaceDeclarationContext namespaceDeclaration(int i) {
			return getRuleContext(NamespaceDeclarationContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoalParserListener ) ((SoalParserListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoalParserListener ) ((SoalParserListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoalParserVisitor ) return ((SoalParserVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(209);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KNamespace || _la==TOpenBracket) {
				{
				{
				setState(206);
				namespaceDeclaration();
				}
				}
				setState(211);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QualifiedNameContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<TerminalNode> TDot() { return getTokens(SoalParser.TDot); }
		public TerminalNode TDot(int i) {
			return getToken(SoalParser.TDot, i);
		}
		public QualifiedNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoalParserListener ) ((SoalParserListener)listener).enterQualifiedName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoalParserListener ) ((SoalParserListener)listener).exitQualifiedName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoalParserVisitor ) return ((SoalParserVisitor<? extends T>)visitor).visitQualifiedName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QualifiedNameContext qualifiedName() throws RecognitionException {
		QualifiedNameContext _localctx = new QualifiedNameContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_qualifiedName);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(212);
			identifier();
			setState(217);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TDot) {
				{
				{
				setState(213);
				match(TDot);
				setState(214);
				identifier();
				}
				}
				setState(219);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IdentifierListContext extends ParserRuleContext {
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public List<TerminalNode> TComma() { return getTokens(SoalParser.TComma); }
		public TerminalNode TComma(int i) {
			return getToken(SoalParser.TComma, i);
		}
		public IdentifierListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_identifierList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoalParserListener ) ((SoalParserListener)listener).enterIdentifierList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoalParserListener ) ((SoalParserListener)listener).exitIdentifierList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoalParserVisitor ) return ((SoalParserVisitor<? extends T>)visitor).visitIdentifierList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdentifierListContext identifierList() throws RecognitionException {
		IdentifierListContext _localctx = new IdentifierListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_identifierList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(220);
			identifier();
			setState(225);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TComma) {
				{
				{
				setState(221);
				match(TComma);
				setState(222);
				identifier();
				}
				}
				setState(227);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QualifiedNameListContext extends ParserRuleContext {
		public List<QualifiedNameContext> qualifiedName() {
			return getRuleContexts(QualifiedNameContext.class);
		}
		public QualifiedNameContext qualifiedName(int i) {
			return getRuleContext(QualifiedNameContext.class,i);
		}
		public List<TerminalNode> TComma() { return getTokens(SoalParser.TComma); }
		public TerminalNode TComma(int i) {
			return getToken(SoalParser.TComma, i);
		}
		public QualifiedNameListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedNameList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoalParserListener ) ((SoalParserListener)listener).enterQualifiedNameList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoalParserListener ) ((SoalParserListener)listener).exitQualifiedNameList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoalParserVisitor ) return ((SoalParserVisitor<? extends T>)visitor).visitQualifiedNameList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QualifiedNameListContext qualifiedNameList() throws RecognitionException {
		QualifiedNameListContext _localctx = new QualifiedNameListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_qualifiedNameList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(228);
			qualifiedName();
			setState(233);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TComma) {
				{
				{
				setState(229);
				match(TComma);
				setState(230);
				qualifiedName();
				}
				}
				setState(235);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AnnotationListContext extends ParserRuleContext {
		public List<AnnotationContext> annotation() {
			return getRuleContexts(AnnotationContext.class);
		}
		public AnnotationContext annotation(int i) {
			return getRuleContext(AnnotationContext.class,i);
		}
		public AnnotationListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_annotationList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoalParserListener ) ((SoalParserListener)listener).enterAnnotationList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoalParserListener ) ((SoalParserListener)listener).exitAnnotationList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoalParserVisitor ) return ((SoalParserVisitor<? extends T>)visitor).visitAnnotationList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AnnotationListContext annotationList() throws RecognitionException {
		AnnotationListContext _localctx = new AnnotationListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_annotationList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(237); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(236);
					annotation();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(239); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnAnnotationListContext extends ParserRuleContext {
		public List<ReturnAnnotationContext> returnAnnotation() {
			return getRuleContexts(ReturnAnnotationContext.class);
		}
		public ReturnAnnotationContext returnAnnotation(int i) {
			return getRuleContext(ReturnAnnotationContext.class,i);
		}
		public ReturnAnnotationListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnAnnotationList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SoalParserListener ) ((SoalParserListener)listener).enterReturnAnnotationList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SoalParserListener ) ((SoalParserListener)listener).exitReturnAnnotationList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SoalParserVisitor ) return ((SoalParserVisitor<? extends T>)visitor).visitReturnAnnotationList(this);
			else return visitor.visitChildren(this);
		}
	}
